--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -6,7 +6,7 @@
 
   / Quick links
   .mt-2.quick-links
-    = link_to 'Advanced Search', search_advanced_path,
+    = link_to 'Advanced Community Search', search_advanced_path,
       class: 'text-success fw-bold text-decoration-none small link-hover'
     %span.mx-1 &bull;
     = link_to 'About page', about_path,
