change "Grids" to "Electric Grids" to look better on the facet and is technically more accurate and provides immediate context , made updates to entire site to be cohesive.

--- a/app/views/grids/index.html.haml
+++ b/app/views/grids/index.html.haml
@@ -1,4 +1,4 @@
-- content_for :title, "Grid Summaries"
+- content_for :title, "Electric Grids"
 
 .container-xl
   .row.justify-content-center.mb-5
@@ -8,7 +8,7 @@
           .col-12.col-md-11.col-lg-10.bg-opacity-75.p-4.rounded-4.bg-body-secondary
             %h1.fw-bold.m-3
               %i.bi.bi-grid-fill.me-2
-              Grid Summaries
+              Electric Grids
 
             %p.lead.fs-5.mx-3
               Explore grid-level insights, from communities served to energy metrics.
