--- a/app/views/searches/advanced/_form.html.haml
+++ b/app/views/searches/advanced/_form.html.haml
@@ -6,23 +6,18 @@
     - if @query.present?
       = link_to search_advanced_path, class: "btn bg-white border-top border-bottom border-end border-start-0", title: "Clear search" do
         %i.bi.bi-x-lg.text-secondary
-
   - reset_disabled = params.except(:controller, :action).blank?
 
-  / Apply and Reset (top)
+  -# --- Facets ---
   .d-flex.justify-content-end.gap-2.mb-4
-    = link_to 'Clear all', search_advanced_path, class: 'btn btn-outline-secondary'
-    = f.submit 'Apply', class: 'btn btn-aedg-primary'
-
-  / Facets
+    = link_to 'Reset Filters', search_advanced_path, class: 'btn btn-outline-secondary'
+    = f.submit 'Search', class: 'btn btn-aedg-primary'
   %ul.list-group.list-group-flush
-    = render 'searches/advanced/facet_list', title: 'Grids',              items: @all_grids, param_key: :grid_ids,                     id_prefix: 'grid', top_n: 6, value_of: ->(g){ g.id }, label_of: ->(g){ g.name }
-    = render 'searches/advanced/facet_list', title: 'Boroughs',           items: @all_boros, param_key: :borough_fips_codes,           id_prefix: 'bor',  top_n: 6, value_of: ->(b){ b.fips_code }, label_of: ->(b){ b.name }
-    = render 'searches/advanced/facet_list', title: 'Native Corporations',items: @all_corps, param_key: :regional_corporation_fips_codes, id_prefix: 'corp', top_n: 6, value_of: ->(c){ c.fips_code }, label_of: ->(c){ c.name }
-    = render 'searches/advanced/facet_list', title: 'Senate Districts',   items: @all_senate, param_key: :senate_district_ids,         id_prefix: 'sen',  top_n: 6, value_of: ->(d){ d.id }, label_of: ->(d){ d.district }
-    = render 'searches/advanced/facet_list', title: 'House Districts', items: @all_house.sort_by { |d| d.name.to_s }, param_key: :house_district_ids, id_prefix: 'hou', top_n: 6, value_of: ->(d){ d.id }, label_of: ->(d){ "#{d.name} #{d.district}" }
-
-  / Apply and Reset (bottom)
+    = render 'searches/advanced/facet_list', title: 'Electric Grid',                        items: @all_grids, param_key: :grid_ids,                     id_prefix: 'grid', top_n: 6, value_of: ->(g){ g.id }, label_of: ->(g){ g.name }
+    = render 'searches/advanced/facet_list', title: 'Borough / Census Area',        items: @all_boros, param_key: :borough_fips_codes,           id_prefix: 'bor',  top_n: 6, value_of: ->(b){ b.fips_code }, label_of: ->(b){ b.name }
+    = render 'searches/advanced/facet_list', title: 'Native Regional Corporation', items: @all_corps, param_key: :regional_corporation_fips_codes, id_prefix: 'corp', top_n: 6, value_of: ->(c){ c.fips_code }, label_of: ->(c){ c.name }
+    = render 'searches/advanced/facet_list', title: 'Senate District',             items: @all_senate, param_key: :senate_district_ids,         id_prefix: 'sen',  top_n: 6, value_of: ->(d){ d.id }, label_of: ->(d){ d.district }
+    = render 'searches/advanced/facet_list', title: 'House District',              items: @all_house.sort_by { |d| d.name.to_s }, param_key: :house_district_ids, id_prefix: 'hou', top_n: 6, value_of: ->(d){ d.id }, label_of: ->(d){ "#{d.name} #{d.district}" }
   .d-flex.justify-content-end.gap-2.mt-4
-    = link_to 'Clear all', search_advanced_path, class: 'btn btn-outline-secondary'
-    = f.submit 'Apply', class: 'btn btn-aedg-primary'
+    = link_to 'Reset Filters', search_advanced_path, class: 'btn btn-outline-secondary'
+    = f.submit 'Search', class: 'btn btn-aedg-primary'
