--- a/app/views/communities/sections/general/_legislative_districts.html.haml
+++ b/app/views/communities/sections/general/_legislative_districts.html.haml
@@ -1,3 +1,4 @@
+- parent_tab = 'general'
 / ── Legislative block 
 .d-flex.align-items-center.mb-3
   %i.bi.bi-map.me-2.fs-4
@@ -32,24 +33,20 @@
       %i.bi.bi-bank
       %span.text-nowrap Senate Districts
 
-.d-flex.justify-content-between.align-items-center
-  .nav.nav-tabs
-    - if @community.show_house_districts?
-      %li.nav-item
-        = link_to "#HouseDistrictData", class: "nav-link active", data: { bs_toggle: "tab" } do
-          %i.bi.bi-table.me-1
-          House District Data
-    - if @community.show_senate_districts?
-      %li.nav-item
-        = link_to "#SenateDistrictData", class: "nav-link", data: { bs_toggle: "tab" } do
-          %i.bi.bi-table.me-1
-          Senate District Data
 
+- if @community.show_house_districts?
+  .row
+    .d-flex.align-items-center.mb-3
+      %i.bi.bi-table.me-2.text-primary
+      %h5.mb-0 House Districts
+    .mb-3
+      = render "communities/sections/#{parent_tab}/legislative_districts/house_district_data"
 
-.tab-content.mt-3
-  - if @community.show_house_districts?
-    #HouseDistrictData.tab-pane.fade.show.active
-      = render "communities/sections/background/legislative_districts/house_district_data"
-  - if @community.show_senate_districts?
-    #SenateDistrictData.tab-pane.fade
-      = render "communities/sections/background/legislative_districts/senate_district_data"
+- if @community.show_senate_districts?
+  .row
+    .d-flex.align-items-center.mb-3
+      %i.bi.bi-table.me-2.text-primary
+      %h5.mb-0 Senate Districts
+    
+    .mb-3
+      = render "communities/sections/#{parent_tab}/legislative_districts/senate_district_data"
