--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -133,7 +133,7 @@
     - tab_order << 'income'
     - tab_order << 'electricity_rates_sales'
     - tab_order << 'electricity' if @community.show_electricity_section?
-    - tab_order << 'prices'      if @community.show_prices_section?
+    - tab_order << 'fuel'
     
   
     -# --- Tab Navigation Menu ---
