--- a/app/views/communities/sections/_electricity.html.haml
+++ b/app/views/communities/sections/_electricity.html.haml
@@ -1,9 +1,9 @@
 - if @community.show_utilities?
   .my-5.mx-3.mx-md-5.mt-3
     = render 'communities/sections/electricity/utilities'
-- if @community.show_production?
+- if @community.show_generation?
   .my-5.mx-3.mx-md-5
-    = render 'communities/sections/electricity/production'
+    = render 'communities/sections/electricity/generation'
 - if @community.show_capacity?
   .my-5.mx-3.mx-md-5
     = render 'communities/sections/electricity/capacity'
