--- a/app/views/communities/sections/electricity/_generation.html.haml
+++ b/app/views/communities/sections/electricity/_generation.html.haml
@@ -1,12 +1,13 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
-  %h4#production.mb-0.me-2.py-3.anchor-offset Production
+  %h4#generation.mb-0.me-2.py-3.anchor-offset Generation
   %hr.flex-grow-1.mt-1.mb-0.mx-2
-  = render "grids/sections/electricity/production/about_modal"
+  = render "communities/sections/electricity/generation/about_modal"
+
 .mb-3
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
-      - if @grid.show_monthly_generation?
+      - if @community.show_monthly_generation?
         %li.nav-item
           = link_to "#monthly-prod-chart-wrapper", class: "nav-link active", data: { bs_toggle: "tab" } do
             %i.bi.bi-graph-up.me-1
@@ -15,7 +16,7 @@
           = link_to "#monthly-prod-data", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-table.me-1
             Monthly Data
-      - if @grid.show_yearly_generation?
+      - if @community.show_yearly_generation?
         %li.nav-item
           = link_to "#yearly-prod-chart-wrapper", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-pie-chart.me-1
@@ -25,17 +26,16 @@
             %i.bi.bi-table.me-1
             Yearly Data
 
-
   .tab-content.mt-3
-    - if @grid.show_monthly_generation?
+    - if @community.show_monthly_generation?
       #monthly-prod-chart-wrapper.tab-pane.fade.show.active
-        = render 'grids/sections/electricity/production/monthly'
-
+        = render "communities/sections/electricity/generation/monthly"
+        
       #monthly-prod-data.tab-pane.fade
-        = render "grids/sections/electricity/production/monthly_data"
-    - if @grid.show_yearly_generation?
+        = render "communities/sections/electricity/generation/monthly_data"
+    - if @community.show_yearly_generation?
       #yearly-prod-chart-wrapper.tab-pane.fade
-        = render "grids/sections/electricity/production/yearly_chart"
+        = render "communities/sections/electricity/generation/yearly_chart"
 
       #yearly-prod-data.tab-pane.fade
-        = render "grids/sections/electricity/production/yearly_data"
+        = render "communities/sections/electricity/generation/yearly_data"
