Rename Electricity section to Power Generation, show both generation charts together

--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -132,7 +132,7 @@
     - tab_order << 'demographics'
     - tab_order << 'income'
     - tab_order << 'electricity_rates_sales'
-    - tab_order << 'electricity' if @community.show_electricity_section?
+    - tab_order << 'power_generation' if @community.show_electricity_section?
     - tab_order << 'fuel'
     
   
