Reduce whitespace on tables

--- a/app/views/communities/sections/background/_geography.html.haml
+++ b/app/views/communities/sections/background/_geography.html.haml
@@ -4,7 +4,7 @@
   %hr.flex-grow-1.mt-1.mb-0
 
 .row
-  %table.table.table-hover
+  %table.table.table-sm.table-hover
     %tbody
       - if @community.name.present?
         %tr
