--- a/app/views/communities/sections/background/income/_household_income_data.html.haml
+++ b/app/views/communities/sections/background/income/_household_income_data.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables' }}
-  %table.table.table-striped.border
+  %table.table.table-sm.table-striped.border
     %thead
       %tr
         %th start_year
