--- a/app/views/communities/sections/background/population/_population_age_sex_datatable.html.haml
+++ b/app/views/communities/sections/background/population/_population_age_sex_datatable.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc'], scroll_x: true } } }
-  %table.table.table-stripped.border
+  %table.table.table-sm.table-stripped.border
     %thead
       %tr
         %th Start Year
