--- a/app/views/communities/sections/electricity/bulk_fuel_facilities/_bulk_fuel_data.html.haml
+++ b/app/views/communities/sections/electricity/bulk_fuel_facilities/_bulk_fuel_data.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc']} } }
-  %table.table.table-striped.border
+  %table.table.table-sm.table-striped.border
     %thead
       %tr
         %th Facility Name
