--- a/app/views/grids/sections/electricity/capacity/_capacity_data.html.haml
+++ b/app/views/grids/sections/electricity/capacity/_capacity_data.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc']} } }
-  %table.table.table-striped.border{ data: { datatables_target: 'table'} }
+  %table.table.table-sm.table-striped.border{ data: { datatables_target: 'table'} }
     %thead
       %tr
         %th Plant
