--- a/app/views/communities/sections/electricity/production/_yearly_data.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_data.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} } }
-  %table.table.table-striped.border
+  %table.table.table-sm.table-striped.border
     %thead
       %tr
         %th Plant
