--- a/app/views/communities/sections/electricity/sales/_data.html.haml
+++ b/app/views/communities/sections/electricity/sales/_data.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [5, 'desc'] } }} 
-  %table.table.table-striped.border
+  %table.table.table-sm.table-striped.border
     %thead
       %tr
         %th Reporting Entity
