--- a/app/views/communities/sections/prices/fuel_prices/_datatable.html.haml
+++ b/app/views/communities/sections/prices/fuel_prices/_datatable.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [5, 'asc'], scroll_x: true }, datatables_title_value:   "Fuel Prices Table"}}
-  %table.table.table-striped.border
+  %table.table.table-sm.table-striped.border
     %caption.text-center.fw-bold.fs-5{ style: "caption-side: top; margin-bottom: .75rem;" }
       Fuel Prices Table
     %thead
