--- a/app/views/grids/sections/electricity/production/_monthly_data.html.haml
+++ b/app/views/grids/sections/electricity/production/_monthly_data.html.haml
@@ -1,5 +1,5 @@
 %div{ data: { controller: 'datatables', datatables: { order_value: [3, 'asc']} } }
-  %table.table.table-stripped.border{ data: { datatables_target: 'table'} }
+  %table.table.table-sm.table-stripped.border{ data: { datatables_target: 'table'} }
     %thead
       %tr
         %th Plant
