Rename Net Generation to Generation due to different reporting requirements (PCE vs EIA)

--- a/app/views/communities/sections/electricity/production/_monthly.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly.html.haml
@@ -41,4 +41,4 @@
     xtitle: 'Month',
     download: {filename: base_title.parameterize},
     colors: [color(:blue), color(:orange)],
-    library: { scales: { y: { type: "linear", position: "left", title: { display: true, text: "Net Generation (MWh)" } }, y1: { type: "linear", position: "right", title: { display: true, text: "Heating Degree Days" } } } }
+    library: { scales: { y: { type: "linear", position: "left", title: { display: true, text: "Generation (MWh)" } }, y1: { type: "linear", position: "right", title: { display: true, text: "Heating Degree Days" } } } }
