--- a/app/views/grids/sections/electricity/production/_monthly.html.haml
+++ b/app/views/grids/sections/electricity/production/_monthly.html.haml
@@ -36,9 +36,7 @@
 
   = column_chart production_monthly_grid_charts_path(@grid, year: selected_year), 
     id: chart_id,
-    title: "#{base_title} (#{selected_year})", 
-    xtitle: 'Month', 
-    ytitle: 'Net Generation (MWh)', 
+    ytitle: 'Generation (MWh)', 
     suffix: ' MWh',
     colors: [color(:blue)],
     download: {filename: base_title.parameterize}
