--- a/app/views/grids/sections/electricity/production/_yearly_chart.html.haml
+++ b/app/views/grids/sections/electricity/production/_yearly_chart.html.haml
@@ -1,4 +1,4 @@
-- base_title = "#{@grid.name.titleize} - Net Generation by Fuel Type"
+- base_title = "#{@grid.name.titleize} - Generation by Fuel Type"
 - chart_options = Chartkick.options.deep_merge({ suffix: ' MWh', donut: true, library: { plugins: { legend: { title: { display: true, text: 'Fuel Type'} } } } })
 - years          = YearlyGeneration.available_years_for(@grid)
 - selected_year  = params[:year].presence&.to_i || years.first
