add facet pannle slide out feature from sidebar facets. filters have paging and scrolling, show up above the search and can be cleared all or one at a time. results updates live when filters are clicked. cleaned up stayling to look like data explorer. (inspo census data search)

--- a/app/views/searches/advanced/_community_card.html.haml
+++ b/app/views/searches/advanced/_community_card.html.haml
@@ -1,6 +1,6 @@
 - community = local_assigns.fetch(:community)
 
-.mb-4.border.rounded.overflow-hidden.bg-light-subtle.shadow-sm-hover{ style: "transition: all 0.2s;" }
+.mb-4.border.rounded.overflow-hidden.bg-light-subtle{ style: "transition: all 0.2s;" }
   .p-3
     -# HEADER
     %h5.mb-2.d-flex.align-items-center.flex-wrap
