Add notes about net vs gross generation and data sources/reporting

--- a/app/views/grids/sections/electricity/production/_about_modal.html.haml
+++ b/app/views/grids/sections/electricity/production/_about_modal.html.haml
@@ -12,6 +12,12 @@
         %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, aria: { label: "Close" } }
       .modal-body
         .d-flex.mb-4
+          = render 'shared/modal/generation_sources', entity: @grid
+          
+        .d-flex.mb-4
+          = render 'shared/modal/net_vs_gross_generation'
+
+        .d-flex.mb-4
           = render 'shared/modal/grid_plant_connection'
 
         .d-flex
