--- a/app/views/communities/sections/electricity/production/_about_modal.html.haml
+++ b/app/views/communities/sections/electricity/production/_about_modal.html.haml
@@ -12,6 +12,12 @@
         %button.btn-close{ type: "button", data: { bs_dismiss: "modal" }, aria: { label: "Close" } }
       .modal-body
         .d-flex.mb-4
+          = render 'shared/modal/generation_sources', entity: @community
+          
+        .d-flex.mb-4
+          = render 'shared/modal/net_vs_gross_generation'
+          
+        .d-flex.mb-4
           = render 'shared/modal/community_service_area'
       
         .d-flex
