Replace rates summary with historical rate chart and display data

--- a/app/views/communities/sections/_quick_nav.html.haml
+++ b/app/views/communities/sections/_quick_nav.html.haml
@@ -33,7 +33,7 @@
       - if @community.show_bulk_fuel_facilities?
         %li= nav_link "Bulk Fuel Facilities", "#bulk-fuel-facilities"
       - if @community.show_rates?
-        %li= nav_link "Rates", "#rates"
+        %li= nav_link "Electric Rates", "#electric-rates"
       - if @community.show_sales?
         %li= nav_link "Sales", "#sales"
       // Prices Section
