Speed up loading by adding database indexes for generation/plant lookups and fixing N+1 queries in the generation/sales data tab views

--- a/app/views/communities/sections/electricity/capacity/_capacity_data.html.haml
+++ b/app/views/communities/sections/electricity/capacity/_capacity_data.html.haml
@@ -8,7 +8,7 @@
         %th Fuel Type Name
         %th Year
     %tbody
-      - @community.capacities.each do |capacity|
+      - @community.capacities.includes(:plant).each do |capacity|
         %tr
           %td= capacity.plant.name
           %td= capacity.capacity_mw
