--- a/app/views/communities/sections/electricity/production/_yearly_data.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_data.html.haml
@@ -11,7 +11,7 @@
       %th Quantity Consumed for Electric Generation (Physical Unit)
       %th Source
     %tbody
-      - @community.yearly_generations.each do |generation|
+      - @community.yearly_generations.includes(:plant).each do |generation|
         %tr
           %td= generation.plant.name
           %td= generation.year
