--- a/app/views/shared/modal/_net_vs_gross_generation.html.haml
+++ b/app/views/shared/modal/_net_vs_gross_generation.html.haml
@@ -12,6 +12,4 @@
     %em Net Generation
     (power available for the grid).
   %p.text-muted.mb-0.mt-2
-    This variation occurs because utilities report to different 
-    %strong reporting programs
-    with distinct reporting requirements. Note that some utilities may switch programs over time, which can result in a mix of data types for a single period.
+    This variation is due to differences in reporting requirements required by each program.
