--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -30,7 +30,7 @@
   })
 }
   / --- LEFT: Map
-  .col-md-4.d-none.d-md-block
+  .col-md-4.d-none.d-lg-block
     .d-flex.flex-column.position-sticky{ style: "top: 50px; height: calc(100vh - 50px);" }
       .flex-grow-1.d-flex.flex-column#mapbox-area
         .d-flex.align-items-center
@@ -126,7 +126,7 @@
           .h-100{ data: { maps_target: "map" } }
 
   / RIGHT: main content 
-  .col-md-8
+  .col-lg-8
     .text-center
 
     - section_order = []
