--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -1,3 +1,6 @@
+- show_monthly_gen = @community.show_monthly_generation?
+- show_yearly_gen = @community.show_yearly_generation?
+
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
   %h4#production.mb-0.me-2.py-3.anchor-offset Production
@@ -7,35 +10,33 @@
 .mb-3
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
-      - if @community.show_monthly_generation?
+      - if show_monthly_gen || show_yearly_gen    
         %li.nav-item
-          = link_to "#monthly-prod-chart-wrapper", class: "nav-link active", data: { bs_toggle: "tab" } do
+          = link_to "#gen-charts", class: "nav-link active", data: { bs_toggle: "tab" } do
             %i.bi.bi-graph-up.me-1
-            Monthly Chart
+            Generation Charts
+
+      - if show_monthly_gen
         %li.nav-item
           = link_to "#monthly-prod-data", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-table.me-1
             Monthly Data
-      - if @community.show_yearly_generation?
-        %li.nav-item
-          = link_to "#yearly-prod-chart-wrapper", class: "nav-link", data: { bs_toggle: "tab" } do
-            %i.bi.bi-pie-chart.me-1
-            Yearly Chart
+
+      - if show_yearly_gen
         %li.nav-item
           = link_to "#yearly-prod-data", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-table.me-1
             Yearly Data
 
   .tab-content.mt-3
-    - if @community.show_monthly_generation?
-      #monthly-prod-chart-wrapper.tab-pane.fade.show.active
-        = render "communities/sections/electricity/production/monthly"
-        
+    - if show_monthly_gen || show_yearly_gen
+      #gen-charts.tab-pane.fade.show.active
+        .mb-5
+          = render "communities/sections/electricity/production/monthly"
+        = render "communities/sections/electricity/production/yearly_chart"
+    - if show_monthly_gen
       #monthly-prod-data.tab-pane.fade
         = render "communities/sections/electricity/production/monthly_data"
-    - if @community.show_yearly_generation?
-      #yearly-prod-chart-wrapper.tab-pane.fade
-        = render "communities/sections/electricity/production/yearly_chart"
-
+    - if show_yearly_gen
       #yearly-prod-data.tab-pane.fade
         = render "communities/sections/electricity/production/yearly_data"
