--- a/app/views/grids/sections/electricity/_generation.html.haml
+++ b/app/views/grids/sections/electricity/_generation.html.haml
@@ -1,8 +1,8 @@
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
-  %h4#production.mb-0.me-2.py-3.anchor-offset Production
+  %h4#generation.mb-0.me-2.py-3.anchor-offset Generation
   %hr.flex-grow-1.mt-1.mb-0.mx-2
-  = render "grids/sections/electricity/production/about_modal"
+  = render "grids/sections/electricity/generation/about_modal"
 .mb-3
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
@@ -29,13 +29,13 @@
   .tab-content.mt-3
     - if @grid.show_monthly_generation?
       #monthly-prod-chart-wrapper.tab-pane.fade.show.active
-        = render 'grids/sections/electricity/production/monthly'
+        = render 'grids/sections/electricity/generation/monthly'
 
       #monthly-prod-data.tab-pane.fade
-        = render "grids/sections/electricity/production/monthly_data"
+        = render "grids/sections/electricity/generation/monthly_data"
     - if @grid.show_yearly_generation?
       #yearly-prod-chart-wrapper.tab-pane.fade
-        = render "grids/sections/electricity/production/yearly_chart"
+        = render "grids/sections/electricity/generation/yearly_chart"
 
       #yearly-prod-data.tab-pane.fade
-        = render "grids/sections/electricity/production/yearly_data"
+        = render "grids/sections/electricity/generation/yearly_data"
