--- a/app/views/grids/sections/electricity/_generation.html.haml
+++ b/app/views/grids/sections/electricity/_generation.html.haml
@@ -1,41 +1,42 @@
+- show_monthly_gen = @grid.show_monthly_generation?
+- show_yearly_gen = @grid.show_yearly_generation?
+
 .d-flex.align-items-center.mb-3
   %i.bi.bi-building-gear.me-2.fs-4
   %h4#generation.mb-0.me-2.py-3.anchor-offset Generation
   %hr.flex-grow-1.mt-1.mb-0.mx-2
   = render "grids/sections/electricity/generation/about_modal"
+  
 .mb-3
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
-      - if @grid.show_monthly_generation?
+      - if show_monthly_gen || show_yearly_gen    
         %li.nav-item
-          = link_to "#monthly-prod-chart-wrapper", class: "nav-link active", data: { bs_toggle: "tab" } do
+          = link_to "#gen-charts", class: "nav-link active", data: { bs_toggle: "tab" } do
             %i.bi.bi-graph-up.me-1
-            Monthly Chart
+            Generation Charts
+
+      - if show_monthly_gen
         %li.nav-item
           = link_to "#monthly-prod-data", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-table.me-1
             Monthly Data
-      - if @grid.show_yearly_generation?
-        %li.nav-item
-          = link_to "#yearly-prod-chart-wrapper", class: "nav-link", data: { bs_toggle: "tab" } do
-            %i.bi.bi-pie-chart.me-1
-            Yearly Chart
+
+      - if show_yearly_gen
         %li.nav-item
           = link_to "#yearly-prod-data", class: "nav-link", data: { bs_toggle: "tab" } do
             %i.bi.bi-table.me-1
             Yearly Data
 
-
   .tab-content.mt-3
-    - if @grid.show_monthly_generation?
-      #monthly-prod-chart-wrapper.tab-pane.fade.show.active
-        = render 'grids/sections/electricity/generation/monthly'
-
+    - if show_monthly_gen || show_yearly_gen
+      #gen-charts.tab-pane.fade.show.active
+        .mb-5
+          = render "grids/sections/electricity/generation/monthly"
+        = render "grids/sections/electricity/generation/yearly_chart"
+    - if show_monthly_gen
       #monthly-prod-data.tab-pane.fade
         = render "grids/sections/electricity/generation/monthly_data"
-    - if @grid.show_yearly_generation?
-      #yearly-prod-chart-wrapper.tab-pane.fade
-        = render "grids/sections/electricity/generation/yearly_chart"
-
+    - if show_yearly_gen
       #yearly-prod-data.tab-pane.fade
         = render "grids/sections/electricity/generation/yearly_data"
