add .includes(:plant) to speed up loading on grid page

--- a/app/views/grids/sections/electricity/capacity/_capacity_data.html.haml
+++ b/app/views/grids/sections/electricity/capacity/_capacity_data.html.haml
@@ -8,7 +8,7 @@
         %th Fuel Type Name
         %th Year
     %tbody
-      - @grid.capacities.each do |capacity|
+      - @grid.capacities.includes(:plant).each do |capacity|
         %tr
           %td= capacity.plant.name
           %td= capacity.capacity_mw
