Add note to legend to toggling sources in yearly generation and capacity charts

--- a/app/views/communities/sections/electricity/generation/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/generation/_yearly_chart.html.haml
@@ -8,4 +8,4 @@
   xtitle: "Year",
   ytitle: "Generation (MWh)",
   download: {filename: base_title.parameterize},
-  library: { plugins: { tooltip: { mode: 'index', intersect: false } }, scales: { x: { stacked: true }, y: { stacked: true, ticks: { maxTicksLimit: 10 } } }, elements: { point: { radius: 1 } } }
+  library: { plugins: { legend: { title: { display: true, text: 'Click on a source to hide/show', font: { size: 12, weight: 'bold' } } }, tooltip: { mode: 'index', intersect: false } }, scales: { x: { stacked: true }, y: { stacked: true, ticks: { maxTicksLimit: 10 } } }, elements: { point: { radius: 1 } } }
